Add wally.toml to ignoreGlobs

--- a/default.project.json
+++ b/default.project.json
@@ -2,5 +2,8 @@
   "name": "PhysicsTween",
   "tree": {
     "$path": "PhysicsTween"
-  }
+  },
+  "ignoreGlobs": [
+    "PhysicsTween/wally.toml"
+  ]
 }
